syntax = "proto3";

package rsa;

service Rsa {
  rpc GetRsaKeyPair (RsaKeyPairRequest) returns (RsaKeyPairResponse) {}
}

message RsaKeyPairRequest {
  int32 key_size = 1;
}

message RsaKeyPairResponse {
  int32 key_size = 1;
  string private_key = 2;
  string public_key = 3;
}
